fixed header overlapping body

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .container-Header{
     margin: auto;
     display: block;
-    width: 100%;
+    padding-bottom: 100px;
 }
 .container-Body{
     min-height: max-content;
